tests/paczka1/fuzzy1/41913967.err
Error in line 6: wsMk67Bbwzz S957 80,0
Error in line 20: xm3 S957 78,7
